# mixed-swarm-simulation

./: README.md
2021 mixed-swarm-compatition/: CMakeLists.txt  package.xml  requirements.txt  setup.py
2021 mixed-swarm-compatition/launch/: contester.launch  contester_uav.launch  contester_ugv.launch
2021 mixed-swarm-compatition/msg/: SampleMessage.msg
2021 mixed-swarm-compatition/res/: ydc_formal.txt
2021 mixed-swarm-compatition/src/: main.py  main_uav.py  main_ugv.py
2022 mixed-swarm-compatition/: a.py  demo.py  ipc.py  main.py
